refactor(spider): 优化代码结构并增强UI线程安全处理
- 将匿名Lambda表达式替换为匿名内部类实现
- 添加线程同步机制保护按钮注入操作
- 实现安全的Toast显示方法避免UI线程异常
- 增加媒体JSON空值检查防止解析错误
- 调整网络请求超时时间配置
- 优化健康检查线程的异常处理机制
- 添加打包时间戳记录
- 重构Switch表达式为If-Else结构提高兼容性
- 优化文件排序比较器实现
- 统一UI更新操作的安全处理方式